syntax = "proto3";

package steam;

option csharp_namespace = "DistanceSteamDataServer";

service Steam {
  rpc GetLeaderboardEntries (LeaderboardRequest) returns (LeaderboardResponse);
  rpc GetPersonaNames (PersonaRequest) returns (PersonaResponse);
}

message LeaderboardRequest {
  string leaderboard_name = 1;
  int32 start_index = 2;
  int32 end_index = 3;
}

message LeaderboardResponse {
  int32 total_entries = 1;
  repeated LeaderboardEntry entries = 2;
}

message LeaderboardEntry {
  fixed64 steam_id = 1;
  int32 global_rank = 2;
  int32 score = 3;
}

message PersonaRequest {
  repeated fixed64 steam_ids = 1;
}

message PersonaResponse {
  repeated string persona_names = 1;
}
